# LiveKit-Main

./: .gitignore  docker-compose.yml
MarhabaHaji/: .env.local.example  agent_tools.py  assistant.py  database.py  instruction.py  logger.py  main.py  pyproject.toml
MavenTech/: .env.local.example  agent_tools.py  assistant.py  database.py  instruction.py  main.py  pyproject.toml
Truliv/: Dockerfile  agent_tools.py  assistant.py  instruction.py  main.py  pyproject.toml
agent/: .env.local.example  agent_tools.py  assistant.py  call_recorder.py  database.py  instruction.py  lead_sync.py  logger.py  main.py  mongo_data.py  pyproject.toml  webhook_sender.py
caddy/: Caddyfile
docs/plans/: 2026-02-17-truliv-voice-agent-design.md  2026-02-17-truliv-voice-agent-plan.md  2026-02-19-agent-dashboards-design.md  2026-02-19-agent-dashboards-plan.md
egress/: egress.yaml
livekit/: livekit.yaml
scripts/: deploy.sh  setup-ec2.sh
sip/: config.yaml  inbound-trunk.json  marhaba-dispatch-rule.json  marhaba-inbound-trunk.json  marhaba-outbound-trunk.json  outbound-trunk.json
